--- a/segreg_dialog_base.ui
+++ b/segreg_dialog_base.ui
@@ -360,7 +360,7 @@
        <x>12</x>
        <y>30</y>
        <width>411</width>
-       <height>241</height>
+       <height>271</height>
       </rect>
      </property>
      <property name="font">
@@ -377,7 +377,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>186</y>
+        <y>216</y>
         <width>91</width>
         <height>30</height>
        </rect>
@@ -390,7 +390,7 @@
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>190</y>
+        <y>220</y>
         <width>251</width>
         <height>21</height>
        </rect>
@@ -403,7 +403,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>70</y>
+        <y>110</y>
         <width>141</width>
         <height>18</height>
        </rect>
@@ -416,7 +416,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>40</y>
+        <y>80</y>
         <width>141</width>
         <height>20</height>
        </rect>
@@ -434,7 +434,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>90</y>
+        <y>130</y>
         <width>141</width>
         <height>18</height>
        </rect>
@@ -447,7 +447,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>110</y>
+        <y>150</y>
         <width>141</width>
         <height>18</height>
        </rect>
@@ -460,7 +460,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>130</y>
+        <y>170</y>
         <width>141</width>
         <height>18</height>
        </rect>
@@ -473,7 +473,7 @@
       <property name="geometry">
        <rect>
         <x>240</x>
-        <y>90</y>
+        <y>130</y>
         <width>131</width>
         <height>18</height>
        </rect>
@@ -486,7 +486,7 @@
       <property name="geometry">
        <rect>
         <x>240</x>
-        <y>110</y>
+        <y>150</y>
         <width>131</width>
         <height>18</height>
        </rect>
@@ -499,7 +499,7 @@
       <property name="geometry">
        <rect>
         <x>240</x>
-        <y>70</y>
+        <y>110</y>
         <width>131</width>
         <height>18</height>
        </rect>
@@ -512,7 +512,7 @@
       <property name="geometry">
        <rect>
         <x>240</x>
-        <y>130</y>
+        <y>170</y>
         <width>131</width>
         <height>18</height>
        </rect>
@@ -525,7 +525,7 @@
       <property name="geometry">
        <rect>
         <x>240</x>
-        <y>40</y>
+        <y>80</y>
         <width>131</width>
         <height>20</height>
        </rect>
@@ -539,12 +539,35 @@
        <string>Global</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_12">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>30</y>
+        <width>371</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Important: Global variables are dependent of it's local version. Please check the corresponding local measure for the global one selected.</string>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
     </widget>
     <widget class="QLabel" name="label_9">
      <property name="geometry">
       <rect>
        <x>14</x>
-       <y>300</y>
+       <y>340</y>
        <width>161</width>
        <height>30</height>
       </rect>
@@ -564,7 +587,7 @@
      <property name="geometry">
       <rect>
        <x>330</x>
-       <y>340</y>
+       <y>380</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -577,7 +600,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>340</y>
+       <y>380</y>
        <width>311</width>
        <height>30</height>
       </rect>
@@ -587,7 +610,7 @@
      <property name="geometry">
       <rect>
        <x>13</x>
-       <y>380</y>
+       <y>420</y>
        <width>401</width>
        <height>41</height>
       </rect>
