--- a/segreg_dialog_base.ui
+++ b/segreg_dialog_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>432</width>
-    <height>607</height>
+    <height>608</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,7 +26,7 @@
       <bool>true</bool>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_input">
       <attribute name="title">
@@ -242,7 +242,7 @@
             <item>
              <widget class="QCheckBox" name="expo_local">
               <property name="text">
-               <string>Expousure/Isolation</string>
+               <string>Exposure/Isolation</string>
               </property>
              </widget>
             </item>
@@ -279,7 +279,7 @@
             <item>
              <widget class="QCheckBox" name="expo_global">
               <property name="text">
-               <string>Expousure/Isolation</string>
+               <string>Exposure/Isolation</string>
               </property>
              </widget>
             </item>
